--- a/css/styles.css
+++ b/css/styles.css
@@ -98,10 +98,9 @@ font-family: var(--primary-font);
         margin-left: auto;
 }
 
-.mail {
+.contacts {
         margin-right: 50px;
 }
-
         
        .head {
         padding-top: 24px;
@@ -345,24 +344,7 @@ font-family: var(--primary-font);
 
 
 
-/* ----------LIST---------- */
 
-
-.project-item {
-        font-weight: 700;
-        font-size: 18px;
-        line-height: 2;
-        letter-spacing: 0.06em;
-        color: var(--primary-text-color);
-        margin-bottom: 10px;
-}
-
-.project-text {
-        font-size: 16px;
-        line-height: 1.8;
-        letter-spacing: 0.03em;
-        color: var(--secondary-text-colour);
-}
 
 /* footer */
 
@@ -469,6 +451,22 @@ font-family: var(--primary-font);
         padding-right: 24px;
         padding-left: 24px;
         
+}
+
+.project-item {
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 2;
+        letter-spacing: 0.06em;
+        color: var(--primary-text-color);
+        margin-bottom: 4px;
+}
+
+.project-text {
+        font-size: 16px;
+        line-height: 1.8;
+        letter-spacing: 0.03em;
+        color: var(--secondary-text-colour);
 }
 
 
